--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.5.0",
+    "express": "^4.18.2",
+    "node-cache": "^5.1.2",
+    "redis": "^4.3.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.5.0"
   }
 }
