--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,23 @@ services:
     image: redis
     container_name: redis_cache
     ports:
-      - 6379:6379
+      - "6379:6379"
     restart: always
     environment:
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
-
+  redis-queue:
+    image: redis
+    container_name: redis_queue
+    ports:
+      - "6380:6379"
+    restart: always
+    environment:
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL,CONFIG
   nginx:
     container_name: load_balancer
     image: nginx:latest
     ports:
-      - 8080:8080
+      - "80:80"
     restart: always
     volumes:
       - ./docker-configurations/nginx/shortener.test.conf:/etc/nginx/conf.d/default.conf
