--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "bull": "^4.10.1",
     "express": "^4.18.2",
     "node-cache": "^5.1.2",
     "redis": "^4.3.1"
