--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@prisma/client": "^4.5.0",
     "bull": "^4.10.1",
     "express": "^4.18.2",
-    "node-cache": "^5.1.2",
-    "redis": "^4.3.1"
+    "ioredis": "^4.28.5"
   },
   "devDependencies": {
     "prisma": "^4.5.0"
