--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,17 @@ services:
     restart: always
     volumes:
       - ./docker-configurations/nginx/shortener.test.conf:/etc/nginx/conf.d/default.conf
+  pg-db:
+    image: postgres:12.12
+    container_name: pg_db
+    ports:
+      - "5435:5432"
+    restart: always
+    environment:
+      POSTGRES_DB: url_shortener
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: root
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
