--- a/docker-configurations/nginx/shortener.test.conf
+++ b/docker-configurations/nginx/shortener.test.conf
@@ -1,6 +1,6 @@
 upstream my_http_servers {
     # httpServer1 listens to port 3000
-    server 192.168.0.29:3000 max_fails=0;
+    server app:3000 max_fails=0;
 
     # httpServer2 listens to port 3001
     # server 127.0.0.1:3001;
