--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       context: ./
-      target: production
+      target: dev
       dockerfile: ./docker-configurations/nodejs/Dockerfile
     volumes:
       - .:/src
